--- a/patterns/06-classification-with-large-number-of-labels/classification_examples.ipynb
+++ b/patterns/06-classification-with-large-number-of-labels/classification_examples.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -773,7 +773,7 @@
        " 'Training session cancellations and refunds': 'Product training'}"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -784,9 +784,6 @@
     "import pandas as pd\n",
     "folder_path =\"data\"\n",
     "file_name = f\"customer_support_transcripts.txt\"\n",
-    "# with open(os.path.join(folder_path,file_name), 'w') as file:\n",
-    "#     file.write(json.dumps(contents))\n",
-    "\n",
     "loaded_content= json.load(open(os.path.join(folder_path,file_name)))\n",
     "loaded_content\n",
     "cat_sub = pd.unique([(content[1],content[2]) for content in  loaded_content])\n",
@@ -873,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -882,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -911,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -949,18 +946,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.4909090909090909"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'content_emb' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\janguy\\OneDrive - Microsoft\\Documents\\projects\\developments\\azure-openai-design-patterns\\patterns\\06-classification-with-large-number-of-labels\\classification_examples.ipynb Cell 15\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/janguy/OneDrive%20-%20Microsoft/Documents/projects/developments/azure-openai-design-patterns/patterns/06-classification-with-large-number-of-labels/classification_examples.ipynb#Y121sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m predictions \u001b[39m=\u001b[39m [classify_cat_emb(vec) \u001b[39mfor\u001b[39;00m vec \u001b[39min\u001b[39;00m content_emb]\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/janguy/OneDrive%20-%20Microsoft/Documents/projects/developments/azure-openai-design-patterns/patterns/06-classification-with-large-number-of-labels/classification_examples.ipynb#Y121sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m labels \u001b[39m=\u001b[39m[content[\u001b[39m1\u001b[39m] \u001b[39mfor\u001b[39;00m content \u001b[39min\u001b[39;00m loaded_content]\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/janguy/OneDrive%20-%20Microsoft/Documents/projects/developments/azure-openai-design-patterns/patterns/06-classification-with-large-number-of-labels/classification_examples.ipynb#Y121sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m predictions \u001b[39m=\u001b[39m [item[\u001b[39m0\u001b[39m]\u001b[39m==\u001b[39mitem[\u001b[39m1\u001b[39m] \u001b[39mfor\u001b[39;00m  item \u001b[39min\u001b[39;00m \u001b[39mzip\u001b[39m(predictions, labels )]\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'content_emb' is not defined"
+     ]
     }
    ],
    "source": [
@@ -970,6 +968,13 @@
     "accuracy = sum(predictions)/len(predictions)\n",
     "accuracy"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
